feat: upgrade springboot-3 version (#9514)
@coderabbitai: ignore